[gd_scene load_steps=4 format=1]

[ext_resource path="res://themes/text30.tres" type="Theme" id=1]
[ext_resource path="res://scripts/game/intro/foreword.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/white.png" type="Texture" id=3]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
modulate = Color( 0, 0, 0, 1 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="foreword" type="RichTextLabel" parent="."]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 0.0
margin/bottom = -200.0
bbcode/enabled = true
bbcode/bbcode = "[center]C'est un jeu d'énigmes et de déchiffrage de codes.[/center]"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="startGame" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 140.0
margin/right = -300.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Jouer"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="skipButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1711.0
margin/top = 929.0
margin/right = 1776.0
margin/bottom = 966.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Skip"
flat = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="startGame" to="." method="_on_startGame_pressed"]

[connection signal="pressed" from="skipButton" to="." method="_on_skipButton_pressed"]


